--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -43,7 +43,6 @@
         android:gravity="center_horizontal|center_vertical" />
 
     <RelativeLayout
-        android:id="@+id/keypad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -51,6 +50,7 @@
         android:layout_marginTop="230dp"
         android:gravity="center">
         <include
+            android:id="@+id/rl_item"
             layout="@layout/item_check" />
     </RelativeLayout>
 
