--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/settings" />
 
     <ImageView
-        android:id="@+id/iv_readers"
+        android:id="@+id/iv_config"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_alignParentEnd="true"
@@ -46,7 +46,7 @@
         android:gravity="center_horizontal|center_vertical" />
 
     <TextView
-        android:id="@+id/button_1"
+        android:id="@+id/btn_new_payment"
         android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_centerHorizontal="true"
