--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,13 +31,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_sample_tip"
+        app:layout_constraintBottom_toTopOf="@id/sample_tip"
         android:layout_marginTop="212dp"
-        android:src="@drawable/logo"
-        android:visibility="visible"/>
+        android:src="@drawable/logo"/>
 
     <TextView
-        android:id="@+id/tv_sample_tip"
+        android:id="@+id/sample_tip"
         android:layout_width="312dp"
         android:layout_height="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,17 +50,11 @@
         android:gravity="center_horizontal|center_vertical" />
 
     <TextView
-        android:id="@+id/btn_new_payment"
-        android:layout_width="320dp"
-        android:layout_height="48dp"
+        android:id="@+id/new_payment"
+        style="@style/button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="24dp"
-        android:text="@string/new_payment"
-        android:textSize="17sp"
-        android:textColor="@color/selector_btn_text"
-        android:lineSpacingExtra="4sp"
-        android:gravity="center_horizontal|center_vertical"
-        android:background="@drawable/selector_btn" />
+        android:text="@string/new_payment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
