Remove width and height value that directly defined in the theme style Remove RelativeLayout components that used in  layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,6 +51,9 @@
 
     <TextView
         android:id="@+id/new_payment"
+        android:layout_width="320dp"
+        android:layout_height="48dp"
+        android:textSize="17sp"
         style="@style/button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
