--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -5,37 +5,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/config_back"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/discover_reader"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:src="@drawable/back" />
-    </RelativeLayout>
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="24dp"
+        android:src="@drawable/back"/>
 
     <TextView
         android:id="@+id/discover_reader"
         style="@style/button"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_width="320dp"
+        android:layout_height="48dp"
+        android:textSize="17sp"
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/config_back"
+        app:layout_constraintTop_toBottomOf="@id/back"
         app:drawableEndCompat="@drawable/ic_right_arrow"
         android:text="@string/discover_readers"/>
 
