add custom configuration fragment (#6)
* add custom configuration fragment
* Remove width and height value that directly defined in the theme style
* Remove RelativeLayout components that used in  layout

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,9 @@
 
     </style>
 
+    <style name="button">
+        <item name="android:textColor">@color/selector_btn_text</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:background">@drawable/selector_btn</item>
+    </style>
 </resources>
