--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="button">
+        <item name="android:textColor">@color/selector_btn_text</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:background">@drawable/selector_btn</item>
+    </style>
 </resources>
