--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,5 +19,16 @@
         <action
             android:id="@+id/action_configFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_configFragment_to_discoverReaderFragment"
+            app:destination="@id/discoverReaderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/discoverReaderFragment"
+        android:name="com.stripe.aod.sampleapp.fragment.DiscoverReaderFragment"
+        android:label="DiscoverReaderFragment" >
+        <action
+            android:id="@+id/action_discoverReaderFragment_to_configFragment"
+            app:destination="@id/configFragment" />
     </fragment>
 </navigation>
