--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,16 +16,22 @@
     <color name="text_default">#FFFFFF</color>
     <color name="text_pressed">#FFFFFF</color>
     <color name="text_disable">#1F1F1F</color>
+    <color name="text_secondary_default">#1F1F1F</color>
+    <color name="text_secondary_pressed">#1F1F1F</color>
+    <color name="text_secondary_disable">#36373A</color>
     <color name="logo_color">#1F1F1F</color>
     <color name="logo_title">#36373A</color>
-
     <color name="text_discover_reader_light">#6A7383</color>
     <color name="text_discover_reader_dark">#C0C8D2</color>
+    <color name="text_amount">#1F1F1F</color>
 
     <!-- Button colors -->
     <color name="button_default">#635BFF</color>
     <color name="button_pressed">#453ECC</color>
     <color name="button_disable">#B3635BFF</color>
+    <color name="button_secondary_default">#EAEDEF</color>
+    <color name="button_secondary_pressed">#DCDEE1</color>
+    <color name="button_secondary_disable">#B3EAEDEF</color>
     <color name="menu_button">#0570DE</color>
 
     <color name="button_back_light">#778292</color>
