--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -14,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="$36.00"
+        tools:text="$36.00"
         android:textSize="40sp"
         android:textStyle="bold"
         android:lineSpacingExtra="0sp"
