Add discovery Reader fragment (#9)
* Add discover reader fragment
* Replaced LiveData with Flow in ViewModel to support reactive programming and provide more flexible data stream processing.
* Refactor onBackPressedDispatcher callback method to use viewLifecycleOwner instead of Activity

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,17 @@
         <action
             android:id="@+id/action_configFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_configFragment_to_discoverReaderFragment"
+            app:destination="@id/discoverReaderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/discoverReaderFragment"
+        android:name="com.stripe.aod.sampleapp.fragment.DiscoverReaderFragment"
+        android:label="DiscoverReaderFragment" >
+        <action
+            android:id="@+id/action_discoverReaderFragment_to_configFragment"
+            app:destination="@id/configFragment" />
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
