--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,6 +22,7 @@
     <color name="logo_color">#FFFFFF</color>
     <color name="logo_title">#C0C8D2</color>
     <color name="text_amount">#F6F8FA</color>
+    <color name="text_enter_amount">#C0C8D2</color>
 
     <!-- Button colors -->
     <color name="button_default">#0570DE</color>
@@ -31,4 +32,13 @@
     <color name="button_secondary_pressed">#1F1F1F</color>
     <color name="button_secondary_disable">#1F1F1F</color>
     <color name="menu_button">#0570DE</color>
+    <color name="button_back">#E0E6EB</color>
+    <color name="button_right_arrow">#E0E6EB</color>
+
+    <!--keyboard button-->
+    <color name="button_keyboard_active">#635BFF</color>
+    <color name="button_keyboard_inactive">#121212</color>
+    <color name="button_clear">#ffffff</color>
+    <color name="text_keyboard">#ffffff</color>
+
 </resources>
