--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,9 @@
         <action
             android:id="@+id/action_homeFragment_to_configFragment"
             app:destination="@id/configFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_inputFragment"
+            app:destination="@id/inputFragment" />
     </fragment>
     <fragment
         android:id="@+id/configFragment"
@@ -35,5 +38,13 @@
         android:id="@+id/receiptFragment"
         android:name="com.stripe.aod.sampleapp.fragment.ReceiptFragment"
         android:label="ReceiptFragment" >
+    </fragment>
+    <fragment
+        android:id="@+id/inputFragment"
+        android:name="com.stripe.aod.sampleapp.fragment.InputFragment"
+        android:label="InputFragment" >
+        <action
+            android:id="@+id/action_inputFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
