--- a/app/src/main/res/drawable/email_input.xml
+++ b/app/src/main/res/drawable/email_input.xml
@@ -13,7 +13,7 @@
             />
         <path
             android:pathData="M1.5 1.5V49.5H313.5V1.5"
-            android:fillColor="#FFFFFF"
+            android:fillColor="@color/edit_backgroud"
             />
     </group>
     <group>
@@ -23,7 +23,7 @@
         <path
             android:pathData="M7.5 1.5H307.5C310.814 1.5 313.5 4.18629 313.5 7.5V43.5C313.5 46.8137 310.814 49.5 307.5 49.5H7.5C4.18629 49.5 1.5 46.8137 1.5 43.5V7.5C1.5 4.18629 4.18629 1.5 7.5 1.5Z"
             android:strokeWidth="3"
-            android:strokeColor="#635BFF"
+            android:strokeColor="@color/edit_border"
             />
     </group>
 </vector>
