--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,6 @@
     <color name="status_offline">#777474</color>
 
     <!-- TextEdit color -->
-    <color name="edit_backgroud">#FFFFFF</color>
+    <color name="edit_background">#FFFFFF</color>
     <color name="edit_border">#635BFF</color>
 </resources>
