--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -13,30 +13,35 @@
         android:padding="24dp"
         android:src="@drawable/back"/>
 
-    <EditText
-        android:id="@+id/email_input"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="24dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="178dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        style="@style/Theme.TextInputLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="emailAddress"
-        android:inputType="textEmailAddress"
-        android:hint="@string/input_your_email"
-        android:background="@drawable/email_input" />
+        app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="16sp"
+            android:textColor="@color/edit_text"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
+            android:hint="@string/input_your_email"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/email_send"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginTop="258dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/email_input"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/selector_btn"
