--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,4 +20,12 @@
         <item name="android:gravity">center_horizontal|center_vertical</item>
         <item name="android:background">@drawable/selector_btn</item>
     </style>
+
+    <style name="AmountStyle">
+        <item name="android:textColor">@color/text_amount</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+    </style>
 </resources>
