Add safeargs library for passing parameters between fragments. Add payment flow .

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,8 +37,8 @@
         android:label="CheckoutFragment" >
         <argument
             android:name="amount"
-            app:argType="long"
-            android:defaultValue="0L" />
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
