--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -34,6 +34,7 @@
     <color name="menu_button">#0570DE</color>
 
     <!-- TextEdit color -->
+    <color name="edit_text">#F6F8FA</color>
     <color name="edit_backgroud">#1F1F1F</color>
     <color name="edit_border">#635BFF</color>
 
