--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,9 @@
         <action
             android:id="@+id/action_homeFragment_to_configFragment"
             app:destination="@id/configFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_inputFragment"
+            app:destination="@id/inputFragment" />
     </fragment>
     <fragment
         android:id="@+id/configFragment"
@@ -37,8 +40,8 @@
         android:label="CheckoutFragment" >
         <argument
             android:name="amount"
-            app:argType="long"
-            android:defaultValue="0L" />
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
@@ -47,6 +50,17 @@
         <action
             android:id="@+id/action_receiptFragment_to_emailFragment"
             app:destination="@id/emailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/inputFragment"
+        android:name="com.stripe.aod.sampleapp.fragment.InputFragment"
+        android:label="InputFragment">
+        <action
+            android:id="@+id/action_inputFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_inputFragment_to_checkoutFragment"
+            app:destination="@id/checkoutFragment" />
     </fragment>
     <fragment
         android:id="@+id/emailFragment"
