--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -33,9 +33,18 @@
     <color name="button_secondary_disable">#1F1F1F</color>
     <color name="menu_button">#0570DE</color>
 
+    <color name="button_back">#E0E6EB</color>
+    <color name="button_right_arrow">#E0E6EB</color>
+
+    <!--keyboard button-->
+    <color name="button_keyboard_active">#635BFF</color>
+    <color name="button_keyboard_inactive">#121212</color>
+    <color name="button_clear">#ffffff</color>
+    <color name="text_keyboard">#ffffff</color>
+
     <!-- TextEdit color -->
+    <color name="edit_background">#1F1F1F</color>
     <color name="edit_text">#F6F8FA</color>
-    <color name="edit_backgroud">#1F1F1F</color>
     <color name="edit_border">#635BFF</color>
 
     <!--divider line -->
