--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,12 @@
         <item name="android:background">@drawable/selector_btn</item>
     </style>
 
+    <style name="KeyboardDigitStyle">
+        <item name="android:textColor">@color/text_keyboard</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+    </style>
+
     <style name="Theme.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeColor">@color/selector_textinputlayout_border</item>
         <item name="boxStrokeWidth">1.5dp</item>
