--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,30 +9,8 @@
         android:name="com.stripe.aod.sampleapp.fragment.HomeFragment"
         android:label="HomeFragment" >
         <action
-            android:id="@+id/action_homeFragment_to_configFragment"
-            app:destination="@id/configFragment" />
-        <action
             android:id="@+id/action_homeFragment_to_inputFragment"
             app:destination="@id/inputFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/configFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.ConfigFragment"
-        android:label="ConfigFragment" >
-        <action
-            android:id="@+id/action_configFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_configFragment_to_discoverReaderFragment"
-            app:destination="@id/discoverReaderFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/discoverReaderFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.DiscoverReaderFragment"
-        android:label="DiscoverReaderFragment" >
-        <action
-            android:id="@+id/action_discoverReaderFragment_to_configFragment"
-            app:destination="@id/configFragment" />
     </fragment>
     <fragment
         android:id="@+id/checkoutFragment"
@@ -42,6 +20,9 @@
             android:name="amount"
             app:argType="integer"
             android:defaultValue="0" />
+        <action
+            android:id="@+id/action_checkoutFragment_to_receiptFragment"
+            app:destination="@id/receiptFragment" />
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
@@ -50,6 +31,14 @@
         <action
             android:id="@+id/action_receiptFragment_to_emailFragment"
             app:destination="@id/emailFragment" />
+        <argument
+            android:name="amount"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="paymentIntentID"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/inputFragment"
