Avoid setting the paymentIntentID parameter to be nullable when navigating to next fragment.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,8 +37,7 @@
             android:defaultValue="0" />
         <argument
             android:name="paymentIntentID"
-            app:argType="string"
-            app:nullable="true" />
+            app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/inputFragment"
